--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,7 @@
 {
-	"endOfLine": "lf",
-	"printWidth": 80,
-	"trailingComma": "es5",
-	"semi": false,
-	"jsxSingleQuote": true,
-	"singleQuote": true,
-	"useTabs": true,
-	"tabWidth": 2,
-	"arrowParens": "always"
+  "semi": false,
+  "trailingComma": "es5",
+  "singleQuote": true,
+  "tabWidth": 2,
+  "useTabs": false
 }
