--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint-staged": "lint-staged",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -24,7 +23,7 @@
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "eslint": "8.19.0",
+    "eslint": "^8.19.0",
     "eslint-config-next": "12.2.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
@@ -33,7 +32,7 @@
     "typescript": "4.7.4"
   },
   "lint-staged": {
-    "src/*.{ts,tsx}": [
+    "src/**/*.{ts,tsx}": [
       "yarn lint"
     ]
   }
