--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "framer-motion": "^6.4.2",
+    "moment": "^2.29.4",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
