--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "framer-motion": "^6.4.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
@@ -26,6 +28,7 @@
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-table": "^7.7.12",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "eslint": "^8.19.0",
     "eslint-config-next": "12.2.0",
